# tracked_robot_2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: flipper_joint.yaml
description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
description/meshes/: chassis_link.STL  left_flipper_link.STL  rear_left_flipper_link.STL  rear_right_flipper_link.STL  right_flipper_link.STL
launch/: rsp.launch.py  tracked_robot.launch.py
scripts/: IMUSub.py  moveJoint.py  quaternion to pitch.py
worlds/: boxes.world  empty.world  empty1.world  humps.world  obstacles.world  stairs.world
